[FEAT] added select in the footer and dynamic q&a section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 </div>
             </div>
         </div>
+        
         <div class="container-sm">
             <div class="row">
                 <div class="content-title">
@@ -319,23 +320,23 @@
                 </div>
             </div>
         </div>
-        <div class="container-sm">
+
+        <!-- REGULAR -->
+        <!-- <div class="container-sm">
             <div class="content">
                 <h2 class="mt-125 mb-50">Domande frequenti</h2>
                 <hr>
-                <div class="d-block">
                     <div class="question">
-                        <div class="question-txt">
-                            <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
-                        </div>
-                        <div class="question-arrow">
-                            <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
+                            <div class="question-txt d-block">
+                                <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                            </div>
+                            <div class="question-arrow">
+                                <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
+                            </div>
+                        <div class="answer-txt d-none">
+                            <p class="m-tb-30 bold d-none">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet veniam corporis, at quod sapiente error eligendi expedita libero recusandae ut dolor iusto, doloribus sequi provident vel? Nulla dolore similique qui?</p>
                         </div>
                     </div>
-                </div>
-                <div class="d-none">
-                    <p class="m-tb-30 bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet veniam corporis, at quod sapiente error eligendi expedita libero recusandae ut dolor iusto, doloribus sequi provident vel? Nulla dolore similique qui?</p>
-                </div>
                 <hr>
                 <div class="question">
                     <div class="question-txt">
@@ -356,8 +357,66 @@
                 </div>
                 <hr class="mb-100">
             </div>
+        </div> -->
+
+    <!-- BONUS -->
+        <div class="container-sm">
+            <div class="content">
+                <h2 class="mt-125 mb-50">Domande frequenti</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-100">
+                        <input type="checkbox" id="q1">
+                            <label for="q1" class="question-bonus d-block">
+                                <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                                <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
+                            </label>
+                        <div class="answer-bonus d-none">
+                            <p class="m-tb-30 bold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt harum beatae corrupti ipsam exercitationem vitae cum dolor necessitatibus voluptate repudiandae. Velit saepe ab veniam quidem totam nobis iure nam deserunt.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-100">
+                        <input type="checkbox" id="q2">
+                        <label for="q2" class="question-bonus d-block">
+                            <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                            <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
+                        </label>
+                        <div class="answer-bonus d-none">
+                            <p class="m-tb-30 bold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt harum beatae corrupti ipsam exercitationem vitae cum dolor necessitatibus voluptate repudiandae. Velit saepe ab veniam quidem totam nobis iure nam deserunt.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-100">
+                        <input type="checkbox" id="q3">
+                        <label for="q3" class="question-bonus d-block">
+                            <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                            <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
+                        </label>
+                        <div class="answer-bonus d-none">
+                            <p class="m-tb-30 bold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt harum beatae corrupti ipsam exercitationem vitae cum dolor necessitatibus voluptate repudiandae. Velit saepe ab veniam quidem totam nobis iure nam deserunt.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr class="mb-100">
+            </div>
         </div>
+
+
+
+
+
     </main>
+
+
+
+
+
+
     <!--Footer-->
     <footer>
         <div class="bg-black">
@@ -367,11 +426,11 @@
                         <div class="content-footer">
                             <ul class="ul-footer">
                                 <li class="li-head mb-30">Dopbox</li>
-                                <li class="li-footer mb-15">Applicazioni desktop</li>
-                                <li class="li-footer mb-15">Perchè Dopbox</li>
-                                <li class="li-footer mb-15">Piani</li>
-                                <li class="li-footer mb-15">Sicurezza</li>
-                                <li class="li-footer mb-15">funzioni</li>
+                                <a><li class="li-footer mb-15">Applicazioni desktop</li></a>
+                                <a><li class="li-footer mb-15">Perchè Dopbox</li></a>
+                                <a><li class="li-footer mb-15">Piani</li></a>
+                                <a><li class="li-footer mb-15">Sicurezza</li></a>
+                                <a><li class="li-footer mb-15">funzioni</li></a>
                             </ul>
                         </div>
                     </div>
@@ -379,11 +438,11 @@
                         <div class="content-footer">
                             <ul class="ul-footer">
                                 <li class="li-head mb-30">Prodotti</li>
-                                <li class="li-footer mb-15">Applicazioni desktop</li>
-                                <li class="li-footer mb-15">Perchè Dopbox</li>
-                                <li class="li-footer mb-15">Piani</li>
-                                <li class="li-footer mb-15">Sicurezza</li>
-                                <li class="li-footer mb-15">funzioni</li>
+                                <a><li class="li-footer mb-15">Applicazioni desktop</li></a>
+                                <a><li class="li-footer mb-15">Perchè Dopbox</li></a>
+                                <a><li class="li-footer mb-15">Piani</li></a>
+                                <a><li class="li-footer mb-15">Sicurezza</li></a>
+                                <a><li class="li-footer mb-15">funzioni</li></a>
                             </ul>
                         </div>
                     </div>
@@ -391,11 +450,11 @@
                         <div class="content-footer">
                             <ul class="ul-footer">
                                 <li class="li-head mb-30">Azienda</li>
-                                <li class="li-footer mb-15">Applicazioni desktop</li>
-                                <li class="li-footer mb-15">Perchè Dopbox</li>
-                                <li class="li-footer mb-15">Piani</li>
-                                <li class="li-footer mb-15">Sicurezza</li>
-                                <li class="li-footer mb-15">funzioni</li>
+                                <a><li class="li-footer mb-15">Applicazioni desktop</li></a>
+                                <a><li class="li-footer mb-15">Perchè Dopbox</li></a>
+                                <a><li class="li-footer mb-15">Piani</li></a>
+                                <a><li class="li-footer mb-15">Sicurezza</li></a>
+                                <a><li class="li-footer mb-15">funzioni</li></a>
                             </ul>
                         </div>
                     </div>
@@ -403,11 +462,11 @@
                         <div class="content-footer">
                             <ul class="ul-footer">
                                 <li class="li-head mb-30">Supporto</li>
-                                <li class="li-footer mb-15">Applicazioni desktop</li>
-                                <li class="li-footer mb-15">Perchè Dopbox</li>
-                                <li class="li-footer mb-15">Piani</li>
-                                <li class="li-footer mb-15">Sicurezza</li>
-                                <li class="li-footer mb-15">funzioni</li>
+                                <a><li class="li-footer mb-15">Applicazioni desktop</li></a>
+                                <a><li class="li-footer mb-15">Perchè Dopbox</li></a>
+                                <a><li class="li-footer mb-15">Piani</li></a>
+                                <a><li class="li-footer mb-15">Sicurezza</li></a>
+                                <a><li class="li-footer mb-15">funzioni</li></a>
                             </ul>
                         </div>
                     </div>
@@ -415,18 +474,37 @@
                         <div class="content-footer">
                             <ul class="ul-footer">
                                 <li class="li-head mb-30">Comunity</li>
-                                <li class="li-footer mb-15">Applicazioni desktop</li>
-                                <li class="li-footer mb-15">Perchè Dopbox</li>
-                                <li class="li-footer mb-15">Piani</li>
-                                <li class="li-footer mb-15">Sicurezza</li>
-                                <li class="li-footer mb-15">funzioni</li>
+                                <a><li class="li-footer mb-15">Applicazioni desktop</li></a>
+                                <a><li class="li-footer mb-15">Perchè Dopbox</li></a>
+                                <a><li class="li-footer mb-15">Piani</li></a>
+                                <a><li class="li-footer mb-15">Sicurezza</li></a>
+                                <a><li class="li-footer mb-15">funzioni</li></a>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <hr class="w-10">
+
+                <!-- <hr class="w-10">
                 <div class="lang mt-30 pb-30">
                     <p><i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-caret-up fa-sm"></i></p>
+                </div> -->
+
+                <!-- BONUS -->
+                <hr class="w-10">
+                <div class="lang mt-30 pb-30">
+                    <p class="footer-globe"><i class="fa-solid fa-earth-americas"></i></p>
+                    <label class="select">
+                        <select name="lang" id="lang">
+                            <option value="ita">Italiano</option>
+                            <option value="eng">English</option>
+                            <option value="esp">Espanol</option>
+                            <option value="jap">日本語</option>
+                            <option value="gre">Deutsch</option>
+                            <option value="Ara">عربي</option>
+                        </select>
+                    </label>
+                    <!-- Ho provato ad aggiungerlo con after per rendere la freccia cliccabile-->
+                    <!-- <p class="footer-globe"><i class="fa-solid fa-caret-up fa-sm"></i></p>  -->
                 </div>
             </div>
         </div>
