--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -19,7 +19,16 @@
                     <ul>
                         <li><a class="unstyle-link"><img src="./img/logo-small.png" alt="Dropbox" class="logo v-middle"></a></li>
                         <li><a class="unstyle-link">Perchè Dopbox</a></li>
-                        <li><a class="unstyle-link">Funzioni</a></li>
+                        <li class="dropdown">
+                            <a class="unstyle-link">Funzioni</a>
+                            <ul>
+                                <li><a class="unstyle-link" href="">Funzione 1</a></li>
+                                <li><a class="unstyle-link" href="">Funzione 2</a></li>
+                                <li><a class="unstyle-link" href="">Funzione 3</a></li>
+                                <li><a class="unstyle-link" href="">Funzione 4</a></li>
+                                <li><a class="unstyle-link" href="">Funzione 5</a></li>
+                            </ul>
+                        </li>
                         <li><a class="unstyle-link">Piani e Prezzi</a></li>
                     </ul>
                 </div>
@@ -51,7 +60,7 @@
                             <p class="mb-35">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropboc Business è piu di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente</p>
                             <a href="" class="btn bg-blue unstyle-link txt-white mb-35">Inizia la tua prova gratuita</a>
                             <p class="mt-30 mb-35">Annulla in qualsiasi momento</p>
-                            <a href="#prices"><i class="fa-solid fa-arrow-down fa-2xl pb-55 mt-50"></i></a>
+                            <a href="#prices" class="arrow-jumbo"><i class="fa-solid fa-arrow-down fa-2xl pb-55 mt-50"></i></a>
                         </div>
                     </div>
                     <div class="col-70">
@@ -66,9 +75,9 @@
         </div>
         
         <div class="container-sm">
-            <div class="row" id="prices">
-                <div class="content-title">
-                    <h2 class="mt-125">Trova il piano business che fa per te</h2>
+            <div class="row">
+                <div class="content-title" id="prices">
+                    <h2 class="mt-125" >Trova il piano business che fa per te</h2>
                     <div class="input-radio">
                         <input class="v-middle mr-5" type="radio" name="fatturazione" value="mensile"><label class="input-label" for="fatturazione">Fatturazione mensile</label>
                         <input class="v-middle mr-5" type="radio" name="fatturazione" value="annuale"><label class="input-label" for="fatturazione">Fatturazione annuale</label>
@@ -321,7 +330,8 @@
             </div>
         </div>
 
-         <div class="container-sm">
+        <!-- REGULAR -->
+        <!-- <div class="container-sm">
             <div class="content">
                 <h2 class="mt-125 mb-50">Domande frequenti</h2>
                 <hr>
@@ -332,6 +342,9 @@
                             <div class="question-arrow">
                                 <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
                             </div>
+                        <div class="answer-txt d-none">
+                            <p class="m-tb-30 bold d-none">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet veniam corporis, at quod sapiente error eligendi expedita libero recusandae ut dolor iusto, doloribus sequi provident vel? Nulla dolore similique qui?</p>
+                        </div>
                     </div>
                 <hr>
                 <div class="question">
@@ -353,7 +366,59 @@
                 </div>
                 <hr class="mb-100">
             </div>
-        </div> 
+        </div> -->
+
+    <!-- BONUS -->
+        <div class="container-sm">
+            <div class="content">
+                <h2 class="mt-125 mb-50">Domande frequenti</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-100">
+                        <input type="checkbox" id="q1">
+                            <label for="q1" class="question-bonus d-block">
+                                <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                                <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
+                            </label>
+                        <div class="answer-bonus d-none">
+                            <p class="m-tb-30 bold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt harum beatae corrupti ipsam exercitationem vitae cum dolor necessitatibus voluptate repudiandae. Velit saepe ab veniam quidem totam nobis iure nam deserunt.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-100">
+                        <input type="checkbox" id="q2">
+                        <label for="q2" class="question-bonus d-block">
+                            <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                            <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
+                        </label>
+                        <div class="answer-bonus d-none">
+                            <p class="m-tb-30 bold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt harum beatae corrupti ipsam exercitationem vitae cum dolor necessitatibus voluptate repudiandae. Velit saepe ab veniam quidem totam nobis iure nam deserunt.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-100">
+                        <input type="checkbox" id="q3">
+                        <label for="q3" class="question-bonus d-block">
+                            <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                            <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
+                        </label>
+                        <div class="answer-bonus d-none">
+                            <p class="m-tb-30 bold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt harum beatae corrupti ipsam exercitationem vitae cum dolor necessitatibus voluptate repudiandae. Velit saepe ab veniam quidem totam nobis iure nam deserunt.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr class="mb-100">
+            </div>
+        </div>
+
+
+
+
+
     </main>
 
 
@@ -427,10 +492,29 @@
                         </div>
                     </div>
                 </div>
-                <hr class="w-10">
+                <!-- REGULAR -->
+                <!-- <hr class="w-10">
                 <div class="lang mt-30 pb-30">
                     <p><i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-caret-up fa-sm"></i></p>
-                </div> 
+                </div> -->
+
+                <!-- BONUS -->
+                <hr class="w-10">
+                <div class="lang mt-30 pb-30">
+                    <p class="footer-globe"><i class="fa-solid fa-earth-americas"></i></p>
+                    <label class="select">
+                        <select name="lang" id="lang">
+                            <option value="ita">Italiano</option>
+                            <option value="eng">English</option>
+                            <option value="esp">Espanol</option>
+                            <option value="jap">日本語</option>
+                            <option value="gre">Deutsch</option>
+                            <option value="Ara">عربي</option>
+                        </select>
+                    </label>
+                    <!-- Ho provato ad aggiungerlo con after per rendere la freccia cliccabile-->
+                    <!-- <p class="footer-globe"><i class="fa-solid fa-caret-up fa-sm"></i></p>  -->
+                </div>
             </div>
         </div>
     </footer>
