[FEAT] added dropdown in the navbar and fixed minor pro

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -16,17 +16,17 @@
         <div class="container-full">
             <div class="row  header-v-align">
                 <div class="content-header txt-left">
-                    <ul>
+                    <ul class="ul-header">
                         <li><a class="unstyle-link"><img src="./img/logo-small.png" alt="Dropbox" class="logo v-middle"></a></li>
                         <li><a class="unstyle-link">Perchè Dopbox</a></li>
                         <li class="dropdown">
                             <a class="unstyle-link">Funzioni</a>
-                            <ul>
+                            <ul class="dropdown-menu">
                                 <li><a class="unstyle-link" href="">Funzione 1</a></li>
                                 <li><a class="unstyle-link" href="">Funzione 2</a></li>
                                 <li><a class="unstyle-link" href="">Funzione 3</a></li>
                                 <li><a class="unstyle-link" href="">Funzione 4</a></li>
-                                <li><a class="unstyle-link" href="">Funzione 5</a></li>
+                                <li><a class="unstyle-link mb-15" href="">Funzione 5</a></li>
                             </ul>
                         </li>
                         <li><a class="unstyle-link">Piani e Prezzi</a></li>
