--- a/index.html
+++ b/index.html
@@ -199,42 +199,42 @@
             <div class="row mb-100">
                 <div class="col-33">
                     <div class="content">
-                        <img src="/img/business-feature-switching-tools.png" alt="Dropbox">
+                        <img src="./img/business-feature-switching-tools.png" alt="Dropbox">
                         <h3 class="mb-30">Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox </p>
                     </div>
                 </div>
                 <div class="col-33">
                     <div class="content">
-                        <img src="/img/business-feature-send-files-it.png" alt="Dropbox">
+                        <img src="./img/business-feature-send-files-it.png" alt="Dropbox">
                         <h3 class="mb-30">Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox </p>
                     </div>
                 </div>
                 <div class="col-33">
                     <div class="content">
-                        <img src="/img/business-feature-coordinate-it.png" alt="Dropbox">
+                        <img src="./img/business-feature-coordinate-it.png" alt="Dropbox">
                         <h3 class="mb-30">Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox </p>
                     </div>
                 </div>
                 <div class="col-33">
                     <div class="content">
-                        <img src="/img/business-feature-integrations-it.png" alt="Dropbox">
+                        <img src="./img/business-feature-integrations-it.png" alt="Dropbox">
                         <h3 class="mb-30">Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox </p>
                     </div>
                 </div>
                 <div class="col-33">
                     <div class="content">
-                        <img src="/img/business-feature-multi-device.png" alt="Dropbox">
+                        <img src="./img/business-feature-multi-device.png" alt="Dropbox">
                         <h3 class="mb-30">Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox </p>
                     </div>
                 </div>
                 <div class="col-33">
                     <div class="content">
-                        <img src="/img/business-feature-security.png" alt="Dropbox">
+                        <img src="./img/business-feature-security.png" alt="Dropbox">
                         <h3 class="mb-30">Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox </p>
                     </div>
@@ -255,29 +255,29 @@
                     <div class="row">
                         <div class="col-50">
                             <div class="content-box-sides bg-lightgreen-border">
-                                <img class="size-logos logo-white" src="/img/designit.svg" alt="designit">
+                                <img class="size-logos logo-white" src="./img/designit.svg" alt="designit">
                             </div>
                         </div>
                         <div class="col-50">
                             <div class="content-box-sides bg-bordaux">
-                                <img class="size-logos logo-white" src="/img/arizona_state_university.svg" alt="asu">
+                                <img class="size-logos logo-white" src="./img/arizona_state_university.svg" alt="asu">
                             </div>
                         </div>
                         <div class="col-50">
                             <div class="content-box-sides bg-sky-blue">
-                                <img class="size-logos logo-white" src="/img/university_of_florida.svg" alt="designit">
+                                <img class="size-logos logo-white" src="./img/university_of_florida.svg" alt="designit">
                             </div>
                         </div>
                         <div class="col-50">
                             <div class="content-box-sides bg-red">
-                                <img class="size-logos logo-white" src="/img/topps.svg" alt="designit">
+                                <img class="size-logos logo-white" src="./img/topps.svg" alt="designit">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-33">
                     <div class="content-box bg-paper">
-                        <img class="size-logos" src="/img/designit.svg" alt="designit">
+                        <img class="size-logos" src="./img/designit.svg" alt="designit">
                         <hr class="mt-50 w-20 opa-50">
                         <p class="mt-50">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, soluzioni sono compatibili con queste esigenze, ma nessuna è facile quando Dropbox Paper".</p>
                         <p class="mt-50">Morten Thomsen, Global IT Lead</p>
@@ -288,22 +288,22 @@
                     <div class="row">
                         <div class="col-50">
                             <div class="content-box-sides bg-darkred">
-                                <img class="size-logos logo-white" src="/img/world_bicycle_relief.svg" alt="designit">
+                                <img class="size-logos logo-white" src="./img/world_bicycle_relief.svg" alt="designit">
                             </div>
                         </div>
                         <div class="col-50">
                             <div class="content-box-sides bg-bluegray">
-                                <img class="size-logos logo-white" src="/img/hearst_corp.svg" alt="designit">
+                                <img class="size-logos logo-white" src="./img/hearst_corp.svg" alt="designit">
                             </div>
                         </div>
                         <div class="col-50">
                             <div class="content-box-sides bg-darkblue">
-                                <img class="size-logos logo-white" src="/img/lonely_planet.svg" alt="designit">
+                                <img class="size-logos logo-white" src="./img/lonely_planet.svg" alt="designit">
                             </div>
                         </div>
                         <div class="col-50">
                             <div class="content-box-sides bg-yellow">
-                                <img class="size-logos logo-white" src="/img/clear_channel.svg" alt="designit">
+                                <img class="size-logos logo-white" src="./img/clear_channel.svg" alt="designit">
                             </div>
                         </div>
                     </div>
